--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \let\E\undefined
 %\usepackage{todonotes}
 %\usepackage{thmtools,thm-restate}
-%\usepackage{enumitem}
+\usepackage{enumitem}
 %\usepackage{ifthen}
 %\usepackage{float}
 
