コマンドに新たに太字のギリシャ文字を定義し、ギャップ増幅補題における意見の表現を整備。文書全体の整合性を向上させるための修正を実施し、PDFおよびSynctexファイルを更新。BiberログとLaTeXmkデータベースを最新の状態に保つための調整を行った。

--- a/commands.tex
+++ b/commands.tex
@@ -183,5 +183,34 @@
 \newcommand{\bary}{\overline{y}}
 \newcommand{\barz}{\overline{z}}
 
+\newcommand{\boldalpha}{\boldsymbol{\alpha}}
+\newcommand{\boldbeta}{\boldsymbol{\beta}}
+\newcommand{\boldgamma}{\boldsymbol{\gamma}}
+\newcommand{\bolddelta}{\boldsymbol{\delta}}
+\newcommand{\boldepsilon}{\boldsymbol{\epsilon}}
+\newcommand{\boldzeta}{\boldsymbol{\zeta}}
+\newcommand{\boldeta}{\boldsymbol{\eta}}
+\newcommand{\boldtheta}{\boldsymbol{\theta}}
+\newcommand{\boldiota}{\boldsymbol{\iota}}
+\newcommand{\boldkappa}{\boldsymbol{\kappa}}
+\newcommand{\boldlambda}{\boldsymbol{\lambda}}
+\newcommand{\boldmu}{\boldsymbol{\mu}}
+\newcommand{\boldnu}{\boldsymbol{\nu}}
+\newcommand{\boldxi}{\boldsymbol{\xi}}
+\newcommand{\boldpi}{\boldsymbol{\pi}}
+\newcommand{\boldrho}{\boldsymbol{\rho}}
+\newcommand{\boldsigma}{\boldsymbol{\sigma}}
+\newcommand{\boldtau}{\boldsymbol{\tau}}
+\newcommand{\boldupsilon}{\boldsymbol{\upsilon}}
+\newcommand{\boldphi}{\boldsymbol{\phi}}
+\newcommand{\boldchi}{\boldsymbol{\chi}}
+\newcommand{\boldpsi}{\boldsymbol{\psi}}
+\newcommand{\boldomega}{\boldsymbol{\omega}}
+\newcommand{\boldvarepsilon}{\boldsymbol{\varepsilon}}
+\newcommand{\boldvartheta}{\boldsymbol{\vartheta}}
+\newcommand{\boldvarrho}{\boldsymbol{\varrho}}
+\newcommand{\boldvarsigma}{\boldsymbol{\varsigma}}
+\newcommand{\boldvarphi}{\boldsymbol{\varphi}}
+\newcommand{\boldvarpi}{\boldsymbol{\varpi}}
 
 \newcommand{\varx}{\mathrm{x}}
