--- a/weak_PCP.tex
+++ b/weak_PCP.tex
@@ -347,7 +347,7 @@ PCP検証者であることを示す(cf. \cref{def:PCP})には, 任意の$\pi\in
 \end{theorem}
 
 我々の最終的な目標であるPCP定理(\cref{thm:PCPtheorem})では, PCP検証者のランダムビットの長さが$r(n)=O(\log n)$であることを要求しているため, $r(n)$に関しては\cref{thm:weak-PCP-theorem}は指数的に大きい値になってしまっているが, 読み込む証明の文字数は$n$に依存しない定数で抑えられるという点では同一である.
-なお, \cref{thm:weak-PCP-theorem}は後に\cref{thm:PCPtheorem}の証明でも用いられる.
+なお, \cref{thm:weak-PCP-theorem}の証明のアイデアは後に\cref{thm:PCPtheorem}の証明でも用いられる.
 
 \subsection{方針}
   NP完全な判定問題として3彩色問題$\ThreeCOL$を考え, ある$r=O(1),q=\poly(n)$に対して$\ThreeCOL\in\PCP(r,q)$を示す.
