--- a/introduction.tex
+++ b/introduction.tex
@@ -16,7 +16,7 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 \item 自然数$n\in\Nat$に対して$[n]=\qty{1,\dots,n}$とする.
 \item 有限集合$S$に対し, $x\sim S$と書いたとき, $x$は$S$から一様ランダムに選ばれた元であることを意味する.
 \item 集合$S$上のベクトル$x\in S^n$および$I\subseteq[n]$に対し, $x_I \in S^I$を, $x$の$I$への制限, すなわち, $x_I(i)=x(i)$ ($i\in I$) と定義する.
-\item 本資料で登場する全ての有限集合$S=\{s_1,\dots,s_m\}$に対し$s_1<s_2<\dots<s_m$という順序が暗に定まっているとする. 非空な部分集合$T=\qty{t_1,\dots,t_k}\subseteq S$を考える際は常にこの順序に従って$t_1<\dots<t_k$を仮定する. 例えばグラフの頂点集合にも順序が一つ決まっており, 無向辺$e=\{u,v\}$を考える際も常に$u<v$を仮定する.
+\item 本資料で登場する全ての有限集合$S=\{s_1,\dots,s_m\}$に対し$s_1<s_2<\dots<s_m$という順序が暗に定まっているとする. 非空な部分集合$T=\qty{t_1,\dots,t_k}\subseteq S$を考える際は常にこの順序に従って$t_1<\dots<t_k$を仮定する. 例えばグラフの頂点集合にも順序が一つ決まっており, 無向辺$e=\{u,v\}$を考える際も\emph{常に}$u<v$を仮定する.
 \item $\binset^*=\bigcup_{n\in\Nat}\binset^n$を有限長の二進文字列全体とする.
 \item $x\in\binset^*$に対して$\abs{x}$を$x$の文字数とする.
 \item アルゴリズム$A$に対し, $A(x)$を入力$x \in \binset^*$に対するアルゴリズム$A$の出力とする. ここで, 単に「アルゴリズム」と言った場合は決定的アルゴリズムを指し, 乱択アルゴリズムについては明示的に言及する.
