--- a/gap_amplification.tex
+++ b/gap_amplification.tex
@@ -293,13 +293,13 @@ $\UNSAT(G') = \frac{d}{d+d_0+1}\UNSAT(G_1) = 0$を得る.
 この節では, そのような制約グラフに対し, 以下で定義する\emph{べき乗}という操作を考えることで, その$\UNSAT$の値を増幅させることができることを示す.
 
 \begin{definition}{制約グラフの冪乗}{power-of-constraint-graph}
-  パラメータ$\ell\in\Nat$および全頂点が自己ループを持つ$d$-正則な制約グラフ$G=\ip{(V,E),\Sigma,\calC}$に対し, べき乗$G^\ell = \ip{(V,\boldE),\Sigma^{d^{\ceil{\ell/2}}},\calC^\ell}$を, 以下のようにして定義する:
+  パラメータ$\ell\in\Nat$および全頂点が自己ループを持つ$d$-正則な制約グラフ$G=\ip{(V,E),\Sigma,\calC}$に対し, べき乗$G^\ell = \ip{(V,\boldE),\Sigma^{d^{\ell}},\calC^\ell}$を, 以下のようにして定義する:
   \begin{itemize}
     \item 頂点集合は同じ$V$とする. なお, $V$の元は$v_1<\dots < v_n$のように順序づけられているとする.
     \item グラフ$(V,\boldE)$をべき乗(\cref{def:power-of-graph})によって得られるグラフ$(V,E)^\ell$とする. すなわち, 各二頂点$u,v\in V$に対し, 長さ$\ell$の$uv$-路の個数と同じだけ$uv$間に多重辺を用意する ($uv$-路と$vu$路の個数は一致するため, 無向グラフとして定義できる). このようにして得られる辺の多重集合を$\boldE$とし, その元を$\bolde = \{u,v\} \in \boldE$とする.
-    \item アルファベット集合は$\Sigma^{d^{\ceil{\ell/2}}}$とする. ここで, 頂点$u$に$\vec{\sigma}=(\sigma_1,\dots,\sigma_{d^{\ceil{\ell/2}}}) \in \Sigma^{d^{\ceil{\ell/2}}}$が割り当てられたとき, 次の意味を持つ: 元の$d$-正則グラフ$G$上で頂点$u$から距離$\ceil{\ell/2}$以内の頂点の集合を$\Gamma(u)$とし\footnote{頂点$v$が頂点$u$から距離$i$以内であるというのは, 頂点$u$から開始し頂点$v$に至る長さ$i$以下の路が存在することをいう.}, その元を頂点番号の大小順で並べて$\Gamma(u)=\qty{ v_1,\dots,v_\ell}$ とする (ここで$G$の$d$-正則性より$\ell \le d^{\ceil{\ell/2}}$である). このとき, $\vec{\sigma}$は$v_1,\dots,v_\ell$の各頂点に$\Sigma$の元を割り当てる関数$\vec{\sigma} \colon \Gamma(u)\to\Sigma$とみなし, $w\in\Gamma(u)$に対し$\sigma=\vec{\sigma}(w)$を, \emph{$u$の$w$に対する意見}と呼ぶ.
-    なお, $\ell < d^{\ceil{\ell/2}}$の場合は相異なる二つの$\vec{\sigma},\vec{\sigma}'\in\Sigma^{d^{\ceil{\ell/2}}}$が同一の関数としてみなされることもある.
-    \item 辺$\bolde = \{u,v\} \in \boldE$ に対応する制約$\boldc_{\bolde}\in \calC^\ell$は次の二つを満たす割り当て$(\vec{\sigma},\vec{\sigma}')\in \Sigma^{d^{\ceil{\ell/2}}} \times \Sigma^{d^{\ceil{\ell/2}}}$によって満たされる:
+    \item アルファベット集合は$\Sigma^{d^{\ell}}$とする. ここで, 頂点$u$に$\vec{\sigma}=(\sigma_1,\dots,\sigma_{d^{\ell}}) \in \Sigma^{d^{\ell}}$が割り当てられたとき, 次の意味を持つ: 元の$d$-正則グラフ$G$上で頂点$u$から距離$\ell$以内の頂点の集合を$\Gamma(u)$とし\footnote{頂点$v$が頂点$u$から距離$i$以内であるというのは, 頂点$u$から開始し頂点$v$に至る長さ$i$以下の路が存在することをいう.}, その元を頂点番号の大小順で並べて$\Gamma(u)=\qty{ v_1,\dots,v_\ell}$ とする (ここで$G$の$d$-正則性より$\ell \le d^{\ell}$である). このとき, $\vec{\sigma}$は$v_1,\dots,v_\ell$の頂点を$\Sigma$の元に移す写像$\vec{\sigma} \colon \Gamma(u)\to\Sigma$とみなし, $w\in\Gamma(u)$に対し$\vec{\sigma}(w)$を, \emph{$u$の$w$に対する意見}と呼ぶ.
+    なお, $\ell < d^{\ell}$の場合は相異なる二つの$\vec{\sigma},\vec{\sigma}'\in\Sigma^{d^{\ell}}$が同一の関数としてみなされることもある (これらは制約を充足するか否かにおいては区別されない).
+    \item 辺$\bolde = \{u,v\} \in \boldE$ に対応する制約$\boldc_{\bolde}\in \calC^\ell$は次の二つを満たす割り当て$(\vec{\sigma},\vec{\sigma}')\in \Sigma^{d^{\ell}} \times \Sigma^{d^{\ell}}$によって満たされる:
     元のグラフ$G$の全ての辺$e=\{s,t\}\in E$ (ただし$s<t$)に対し,
       \begin{itemize}
         \item $s\in \Gamma(u), t\in\Gamma(v)$ならば$(\vec{\sigma}(s), \vec{\sigma}'(t))\in c_e$が成り立つ.
@@ -311,18 +311,19 @@ $\UNSAT(G') = \frac{d}{d+d_0+1}\UNSAT(G_1) = 0$を得る.
 \begin{figure}[h]
   \centering
   \includegraphics[width=\textwidth]{images/gap_amplification.pdf}
-  \caption{制約グラフ$G$のべき乗$G^\ell$の図例. 頂点$u,v$にそれぞれ$\vec{\sigma},\vec{\sigma}'\in\Sigma^{d^{\ceil{\ell/2}}}$が割り当てられているとき, それぞれ関数$\vec{\sigma}\colon \Gamma(u)\to\Sigma$と$\vec{\sigma}'\colon \Gamma(v)\to\Sigma$とみなす. なお, 元のグラフ$G$が自己ループを持つことから, 距離$\ceil{\ell/2}$以内の全ての頂点に対して意見が定義される. なお, $\ell$が奇数のときはこの二つの円は交わる. \label{fig:gap-amplification}}
+  \caption{制約グラフ$G$のべき乗$G^\ell$の図例. 頂点$u,v$にそれぞれ$\vec{\sigma},\vec{\sigma}'\in\Sigma^{d^{\ell}}$が割り当てられているとき, それぞれ関数$\vec{\sigma}\colon \Gamma(u)\to\Sigma$と$\vec{\sigma}'\colon \Gamma(v)\to\Sigma$とみなす. なお, 元のグラフ$G$が自己ループを持つことから, 距離$\ell$以内の全ての頂点に対して意見が定義される. なお, $\ell$が奇数のときはこの二つの円は交わる. \label{fig:gap-amplification}}
 \end{figure}
+
+最後に, $G^\ell$における割り当て$a'\colon V\to\Sigma^{d^{\ell}}$に対し, $u$の$w$に対する意見を$a'(u)_w$と表すことにする.
 
 パラメータ$\ell$は制約グラフのサイズ$\size(G)$には依存しない定数であることを常に想定する.
 べき乗をで得られた制約グラフは元の制約グラフに対して$\UNSAT$の値が増幅している.
 
 \begin{lemma}{べき乗の性質}{property-of-power}
   ある定数$\beta=\beta(\lambda,d,\abs{\Sigma})$が存在して以下が成り立つ:
-  パラメータ$\ell\in\Nat$および全頂点が自己ループを持つ$d$-正則な制約グラフ$G=\ip{(V,E),\Sigma,\calC}$に対し, べき乗$G^\ell = \ip{(V,\boldE),\Sigma^{\ceil{\ell/2}},\calC^\ell}$を, \cref{def:power-of-constraint-graph}で定義する.
+  パラメータ$\ell \le \abs{E}$および全頂点が自己ループを持つ$d$-正則な制約グラフ$G=\ip{(V,E),\Sigma,\calC}$に対し, べき乗$G^\ell = \ip{(V,\boldE),\Sigma^{\ell},\calC^\ell}$を, \cref{def:power-of-constraint-graph}で定義する.
   このとき
   \begin{itemize}
-    \item 元の制約グラフ$G$が$\lambda$-エクスパンダーであるとき, $G^\ell$は$d^\ell$-正則$\lambda^\ell$-エクスパンダーである.
     \item $\size(G^\ell) \le \size(G)\cdot d^\ell$である.
     \item $\UNSAT(G)=0$ならば$\UNSAT(G^\ell)=0$である.
     \item $\UNSAT(G^\ell) \ge \beta\sqrt{\ell}\cdot \min\qty{ \UNSAT(G), \frac{1}{\ell} }$である.
@@ -330,26 +331,24 @@ $\UNSAT(G') = \frac{d}{d+d_0+1}\UNSAT(G_1) = 0$を得る.
 \end{lemma}
 \begin{proof}
 
-\cref{lem:power-of-regular-expander}により, $G$が$d$-正則かつ$\lambda$-エクスパンダーならば$G^\ell$は$d^\ell$-正則かつ$\lambda^\ell$-エクスパンダーとなる.
-特に, $\size(G^\ell) \le \size(G)\cdot d^\ell$である.
+定義より$\abs{\boldE} \le \abs{V}d^{\ell}$であるから, $\size(G^\ell) \le \size(G)\cdot d^\ell$である.
 
-また, $\UNSAT(G)=0$ならば, 全制約を満たす割り当て$a\colon V \to \Sigma$を用いて$G^\ell$の全ての制約を満たす割り当て$a'\colon V \to \Sigma^{\ceil{\ell/2}}$を, 各頂点$u\in V$に対し
+また, $\UNSAT(G)=0$ならば, 全制約を満たす割り当て$a\colon V \to \Sigma$に対し
 \begin{align*}
-  \vec{\sigma}(u)\colon s \mapsto a(s)
+  a'(u)_u = a(u)
 \end{align*}
-となるような$\vec{\sigma}\in\Sigma^{\ceil{\ell/2}}$を$a'(u)$と定めることによって得られる.
-すなわち$\UNSAT(G^\ell)=0$である.
+で定まる$a'\colon V\to\Sigma^{\ell}$を考えると, これは全ての制約を満たす割り当てであるため, $\UNSAT(G^\ell)=0$である.
 
 最後に$\UNSAT(G^\ell)$の下界を証明する.
-頂点$u\in V$に対し, $V$値をとる確率変数$RW(u)$を, グラフ$G$上で頂点$u$から開始する長さ$\ceil{\ell/2}$のランダムウォークの最終到達頂点とする (長さとは辿った辺の本数のことである).
-べき乗の制約グラフ$G^\ell$における割り当て$a'\colon V \to \Sigma^{\ceil{\ell/2}}$に対し, 元の制約グラフに対する任意の割り当て$a\colon V\to\Sigma$を, 「重み付き多数決」によって定める.
-頂点$u\in V$に対し, $\vec{\sigma} = a(u)$とし, 以下で定まる$\sigma$を$a(u)=\sigma$とする:
+頂点$u\in V$に対し, $V$値をとる確率変数$\RW_j(u)$を, グラフ$G$上で頂点$u$から開始する長さ$j$のランダムウォークの最終到達頂点とする (長さとは辿った辺の本数のことである).
+べき乗の制約グラフ$G^\ell$における割り当て$a'\colon V \to \Sigma^{\ell}$に対し, 元の制約グラフに対する任意の割り当て$a\colon V\to\Sigma$を
 \begin{align}
-  \sigma = \argmax_{\tau \in \Sigma} \qty{ \Pr\qty[ \vec{\sigma}\qty(\RW(u)) = \tau ] }. \label{eq:argmax-of-RW}
+  a(u) = \argmax_{\tau \in \Sigma} \qty{ \Pr\qty[ a'(u)_{\RW(u)} = \tau ] }. \label{eq:argmax-of-RW}
 \end{align}
-常に$\RW(u)\in \Gamma(u)$であるから$\vec{\sigma}\qty( \RW(u) )$は必ず存在する.
+によって定める.
+常に$\RW(u)\in \Gamma(u)$であるから$a'(u)_{\RW(u)}$は必ず存在する.
+すなわち, $u$から開始したランダムウォークが最も「拾いやすい」意見を$a(u)$としている.
 また, タイが発生した場合はその中から任意に選ぶ.
-直感的には, $\vec{\sigma}(u)$の中で最も登場頻度の高い意見を$a(u)=\sigma$としている.
 このようにして定めた割り当て$a\colon V \to \Sigma$は, 適当な定数$\beta=\beta(\lambda,d,\abs{\Sigma})>0$に対して
 \begin{align}
   \UNSAT(a';G^\ell) \ge \beta\sqrt{\ell}\cdot \min\qty{ \UNSAT(a;G), \frac{1}{\ell} }. \label{eq:lower-bound-of-UNSAT}
@@ -358,8 +357,8 @@ $\UNSAT(G') = \frac{d}{d+d_0+1}\UNSAT(G_1) = 0$を得る.
 
 \paragraph*{\cref{eq:lower-bound-of-UNSAT}の証明.}
 
-簡単のため$\ell\in\Nat$は偶数とする.
-割り当て$a'\colon V\to \Sigma^{d^{\ell/2}}$を固定し, $a$を\cref{eq:argmax-of-RW}によって定める.
+$\UNSAT(a;G)=0$ならばすでに示されているため, $\UNSAT(a;G)>0$とする.
+割り当て$a'\colon V\to \Sigma^{d^{\ell}}$を固定し, $a$を\cref{eq:argmax-of-RW}によって定める.
 頂点$u\in V$に対し, 確率変数$X_u\in\Sigma$を, ($a'$における)$u$の$\RW(u)$の意見とする.
 \cref{eq:argmax-of-RW}より, $\Pr[X_u = a(u)] \ge \frac{1}{\abs{\Sigma}}$である.
 
@@ -367,28 +366,116 @@ $\UNSAT(G') = \frac{d}{d+d_0+1}\UNSAT(G_1) = 0$を得る.
 さらにその部分集合$F\subseteq F_0$を, 
 \begin{itemize}
 \item $\abs{F_0} \le \frac{\abs{E}}{\ell}$ならば$F_0=F$,
-\item そうでない場合は$\abs{F} = \floor*{\frac{\abs{E}}{\ell}}$となるように$F$を任意にとる.
+\item そうでない場合は$\abs{F} = \floor*{\frac{\abs{E}}{\ell}}$となるように$F$を任意に固定する.
 \end{itemize}
-このとき,
-\begin{align*}
-  \frac{\abs{F}}{\abs{E}} \le \min\qty{ \frac{\abs{F_0}}{\abs{E}}, \frac{1}{\ell} } = \min\qty{ \UNSAT(a;G), \frac{1}{\ell} }
-\end{align*}
-が成り立つ.
-べき乗グラフの辺$\bolde \in \boldE$は$G$上の長さ$\ell$の路に対応する.
-従って$\bolde = (v_0,\dots,v_\ell)$ (ただし全ての$i\in[\ell]$に対し$\qty{v_{i-1},v_{i}}\in E$)と表し, 元のグラフの辺と区別するため$e\in E$を$G$辺, $\bolde\in\boldE$を$G^\ell$辺と呼ぶことにする.
+このとき, 任意の$x\ge 1$に対し$\floor{x}\ge x/2$であることから, $\frac{\abs{E}}{\ell}\ge 1$の仮定を用いて
+\begin{align}
+  \abs{F} &\ge \min\qty{ \abs{F_0}, \floor*{\frac{\abs{E}}{\ell}} } \nonumber \\
+  &\ge \frac{1}{2}\min\qty{ \abs{F_0}, \frac{\abs{E}}{\ell} } \nonumber \\
+  &\ge \frac{\abs{E}}{2}\min\qty{ \UNSAT(a;G), \frac{1}{\ell} } \label{eq:abs-F}
+\end{align}
+を得る (なお, $\abs{E}\ge \ell$の仮定を用いるのはここのみである).
 
-$G^\ell$辺$\bolde=(v_0,\dots,v_\ell)$の$i$番目の辺$e_i:=\qty{v_{i-1},v_i}$は
+べき乗グラフの辺$\bolde \in \boldE$は$G$上の長さ$\ell$の路に対応する.
+従って$\bolde = (u_0,\dots,u_\ell)$ (ただし全ての$i\in[\ell]$に対し$\qty{u_{i-1},u_{i}}\in E$)と表し, 元のグラフの辺と区別するため$e\in E$を$G$辺, $\bolde\in\boldE$を$G^\ell$辺と呼ぶことにする.
+
+$G^\ell$辺$\bolde=(u_0,\dots,u_\ell)$の$i$番目の辺$e_i:=\qty{u_{i-1},u_i}$は
 \begin{itemize}
   \item $e_i \in F$
-  \item $\vec{\sigma}(v_{0})_{v_{i-1}} = \sigma(v_{i-1})$ かつ $\vec(\sigma)(v_\ell)_{v_i} = \sigma(v_i)$
+  \item $a'(u_{0})_{u_{i-1}} = a(u_{i-1})$ かつ $a'(u_\ell)_{u_i} = a(u_i)$
 \end{itemize}
-を全て満たすとき, \emph{悪い}ということにする.
-$G^\ell$辺$\bolde$の中の悪い辺の個数を$B$, $B_i\in\binset$を辺$e_i$が悪いならば$B_i=1$, そうでないならば$B_i=0$とする.
-一様ランダムに$G^\ell$辺$\bolde$を選ぶとき, $B$と各$B_i$は確率変数となる.
+をどちらも満たすとき, \emph{悪い}ということにする.
+一様ランダムに$\bolde$を選んだとき, $B_i\in\binset$を辺$e_i$が悪いならば$B_i=1$, そうでないならば$B_i=0$とする (これらは確率変数である).
+さらに
+\begin{align*}
+  I = \qty[\frac{\ell}{2} - \sqrt{\frac{\ell}{2}}, \frac{\ell}{2} + \sqrt{\frac{\ell}{2}}] \cap \mathbb{Z}
+\end{align*}
+に対し, $B=\sum_{i\in I}B_i$とする.
+もしも$B>0$ならば, 辺$\bolde$の制約$c'_{\bolde}$は$a'$によって充足されない.
+従って, $\UNSAT(a';G^\ell) \ge \Pr_{\bolde\sim \boldE}[B\ge 1]$である.
+
+以下の不等式を用いて$\Pr[B>0]$を評価する:
+\begin{lemma}{Paley-Zygmundの不等式}{paley-zigmund-inequality}
+  非負整数値をとる任意の確率変数$X$に対し,
+  \begin{align*}
+    \Pr[X\ge 1] \ge \frac{\E[X]^2}{\E[X^2]}.
+  \end{align*}
+\end{lemma}
+\begin{proof}
+  非負整数値をとる確率変数$X$に対し
+  \begin{align*}
+    \E[X] &= \E[X\cdot \indicator{X\ge 1}] \\
+    &\le \sqrt{ \E[X^2]\cdot \E[\indicator{X\ge 1}] } & & \because\text{Cauchy-Schwarzの不等式}\\
+    &= \sqrt{ \E[X^2]\cdot \Pr[X\ge 1] }.
+  \end{align*}
+  両辺を二乗して整理すると主張を得る.  
+\end{proof}
+
+すなわち, $E[B]$および$\E[B^2]$を評価することで$\Pr[B\ge 1]$の下界を得ることができる.
+これらは以下のように評価できる. 主張の証明は後で与える.
+
+\begin{claim}{$B$の期待値}{expectation-of-B}
+  ある十分小さな定数$C=C(d,\lambda,\abs{\Sigma})>0$が存在して, $B$の期待値は
+  \begin{align*}
+    \E[B] \ge C\sqrt{\ell} \cdot \frac{\abs{F}}{\abs{E}}.
+  \end{align*}
+\end{claim}
+
+\begin{claim}{$B^2$の期待値}{expectation-of-B-squared}
+  ある十分大きな定数$C'=C'(d,\lambda,\abs{\Sigma})>0$が存在して, $B^2$の期待値は
+  \begin{align*}
+    \E[B^2] \le C'\sqrt{\ell} \cdot \frac{\abs{F}}{\abs{E}}.
+  \end{align*}
+\end{claim}
+
+これらを用いて\cref{eq:lower-bound-of-UNSAT}を示す.
+実際, \cref{lem:paley-zigmund-inequality,claim:expectation-of-B,claim:expectation-of-B-squared}より, 定数$\beta=\frac{C^2}{2C'}>0$に対して
+\begin{align*}
+  \UNSAT(a';G^\ell) &\ge \Pr[B\ge 1] \\
+  &\ge \frac{\E[B]^2}{\E[B^2]} \\
+  &\ge \frac{C^2}{C'} \sqrt{\ell} \cdot \frac{\abs{F}}{\abs{E}} \\
+  & \ge \beta \sqrt{\ell} \cdot \min\qty{ \UNSAT(a;G), \frac{1}{\ell} } & & \because \text{\cref{eq:abs-F}}
+\end{align*}
+となり主張を得る.
 
 \end{proof}
 
+最後に残された二つの主張の証明を与える. なお, 制約グラフのエクスパンダー性を用いるのは\cref{claim:expectation-of-B-squared}の証明のみである.
+\begin{proof}[\cref{claim:expectation-of-B}の証明]
+  各$i\in I$に対して$\E[B_i]=\Pr_{\bolde\sim \boldE}[e_i\text{ が悪い}]$を下から抑えればよい.
+  一様ランダムな$\bolde=(u_0,\dots,u_\ell)\sim\boldE$は$G$上の長さ$\ell$のランダムウォークであるから, 各$i\in I$に対して$\bolde$は以下のプロセスによって生成される:
+  \begin{enumerate}
+    \item 辺$\{u_{i-1},u_i\}\sim E$を一様ランダムに選ぶ.
+    \item 頂点$u_{i-1}$から開始して長さ$i-1$のランダムウォークを行い, 辿った頂点を順番に$u_{i-1},u_{i-2},\dots,u_0$とする.
+    \item 同様に, 頂点$u_i$から開始して長さ$\ell-i$のランダムウォークを行い, 辿った頂点を順番に$u_i,u_{i+1},\dots,u_\ell$とする.
+    \item 頂点列$(u_0,\dots,u_\ell)$に対応する$\bolde \in \boldE$を出力する.
+  \end{enumerate}
 
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/randomwalk_process.pdf}
+    \caption{ランダムウォークの図例. 頂点$u_0$から開始して長さ$i-1$のランダムウォークを行い, 辿った頂点を順番に$u_{i-1},u_{i-2},\dots,u_0$とする. 同様に, 頂点$u_i$から開始して長さ$\ell-i$のランダムウォークを行い, 辿った頂点を順番に$u_i,u_{i+1},\dots,u_\ell$とする. この二つのランダムウォークを組み合わせて, 長さ$\ell$のランダムウォークを生成する. \label{fig:random-walk}}
+  \end{figure}
+
+  このプロセスに基づいて, $\Pr[B_i=1]$を評価する.
+  まず, ステップ1で選ばれた辺が$\qty{u_{i-1},u_i}\in F$である確率は$\frac{\abs{F}}{\abs{E}}$である.
+  次にステップ1で選ばれた辺$\qty{u_{i-1},u_i}\in F$で条件つけたとき, ステップ2と3は独立なランダムネスに基づく試行であるため, それぞれの両端点$u_0,u_\ell$は独立な確率変数である.
+  従って
+  \begin{align*}
+    \Pr[B_i=1] &= \E_{\text{step 1-3}}\qty[\{u_{i-1},u_i\}\in F \text{ and }a'(u_0)_{u_{i-1}} = a(u_{i-1})\text{ and }a'(u_\ell)_{u_i} = a(u_i)] \\
+     &= \frac{\abs{F}}{\abs{E}} \cdot \E_{\{u_{i-1},u_i\}\sim F}\qty[ \underbrace{\Pr_{\text{step 2}}[a'(u_0)_{u_{i-1}} = a(u_{i-1})]}_{=:p_0} \cdot \underbrace{\Pr_{\text{step 3}}[a'(u_\ell)_{u_i} = a(u_i)]}_{=:p_\ell}]
+  \end{align*}
+  を得る. 二つ目の等式では, $\{u_{i-1},u_i\}\in F$で条件つけて$\{u_{i-1},u_i\}\sim E$をランダムに選ぶというのは, $F$内の辺を一様ランダムに選ぶことに他ならないことに留意する.
+
+  次に, $p_0$と$p_\ell$を評価する.
+  頂点$u_{i-1}$を任意に固定して$p_0$を考える ($p_\ell$も同様に示せる).
+  ステップ2の端点$u_0$は$u_0=\RW_i(u_{i-1})$である.
+
+\end{proof}
+
+\begin{proof}[\cref{claim:expectation-of-B-squared}の証明]
+  
+\end{proof}
 
 \section{アルファベット削減}
 
